// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`task creation visual baseline > matches the dark success state with the created title first 1`] = `
<section
  aria-labelledby="task-create-title"
  class="task-create-page"
>
  <div
    class="task-create-page__header"
  >
    <p
      class="eyebrow"
    >
      New task
    </p>
    <h1
      id="task-create-title"
    >
      Add a new task
    </h1>
    <p
      class="lede"
    >
      Paste the raw request here to create a PM intake draft and route it into the task workflow.
    </p>
  </div>
  <section
    aria-live="polite"
    class="task-create-page__success"
    role="status"
    tabindex="-1"
  >
    <div
      class="task-create-page__success-copy"
    >
      <p
        class="eyebrow"
      >
        Intake Draft created
      </p>
      <h2>
        Dark title-first intake
      </h2>
      <p>
        TSK-DARK is ready for PM refinement. Status: DRAFT. Next step: PM refinement required.
      </p>
      <div
        class="task-create-page__intake-summary"
      >
        <dl>
          <div>
            <dt>
              Task
            </dt>
            <dd>
              TSK-DARK
            </dd>
          </div>
          <div>
            <dt>
              Stage
            </dt>
            <dd>
              Intake Draft
            </dd>
          </div>
          <div>
            <dt>
              Next step
            </dt>
            <dd>
              PM refinement required
            </dd>
          </div>
        </dl>
        <div>
          <h4>
            Operator intake requirements
          </h4>
          <p>
            Raw operator request from the visual baseline.
          </p>
        </div>
      </div>
    </div>
    <div
      class="task-create-page__success-actions"
    >
      <a
        href="/tasks/TSK-DARK?created=intake-draft"
      >
        Open task detail
      </a>
      <a
        href="/tasks?view=board"
      >
        View task workspace
      </a>
      <button
        class="button-secondary"
        type="button"
      >
        Create another task
      </button>
    </div>
  </section>
</section>
`;

exports[`task creation visual baseline > matches the title-first dark form state 1`] = `
<section
  aria-labelledby="task-create-title"
  class="task-create-page"
>
  <div
    class="task-create-page__header"
  >
    <p
      class="eyebrow"
    >
      New task
    </p>
    <h1
      id="task-create-title"
    >
      Add a new task
    </h1>
    <p
      class="lede"
    >
      Paste the raw request here to create a PM intake draft and route it into the task workflow.
    </p>
  </div>
  <form
    aria-describedby="task-create-guidance"
    class="_form_06f289"
  >
    <div
      class="_field_06f289"
    >
      <label
        for="title"
      >
        Title
      </label>
      <input
        id="title"
        maxlength="120"
        name="title"
        placeholder="Optional short title"
      />
    </div>
    <div
      class="_field_06f289"
    >
      <label
        for="raw_requirements"
      >
        Requirements *
      </label>
      <textarea
        aria-describedby="task-create-guidance"
        id="raw_requirements"
        name="raw_requirements"
        placeholder="Paste the request, acceptance notes, links, and context exactly as received."
        required=""
      />
      <p
        class="_help_06f289"
        id="task-create-guidance"
      >
        Include the operator request, acceptance notes, links, risks, and any known constraints.
      </p>
    </div>
    <div
      class="_actions_06f289"
    >
      <button
        aria-busy="false"
        aria-disabled="false"
        class="_button_0829c1 _primary_0829c1 _md_0829c1"
        type="submit"
      >
        <span>
          Create task draft
        </span>
      </button>
    </div>
  </form>
</section>
`;

exports[`task creation visual baseline > matches the validation error state 1`] = `
<section
  aria-labelledby="task-create-title"
  class="task-create-page"
>
  <div
    class="task-create-page__header"
  >
    <p
      class="eyebrow"
    >
      New task
    </p>
    <h1
      id="task-create-title"
    >
      Add a new task
    </h1>
    <p
      class="lede"
    >
      Paste the raw request here to create a PM intake draft and route it into the task workflow.
    </p>
  </div>
  <form
    aria-describedby="task-create-guidance"
    class="_form_06f289"
  >
    <div
      class="_field_06f289"
    >
      <label
        for="title"
      >
        Title
      </label>
      <input
        id="title"
        maxlength="120"
        name="title"
        placeholder="Optional short title"
      />
    </div>
    <div
      class="_field_06f289"
    >
      <label
        for="raw_requirements"
      >
        Requirements *
      </label>
      <textarea
        aria-describedby="task-create-guidance raw-requirements-error"
        aria-invalid="true"
        id="raw_requirements"
        name="raw_requirements"
        placeholder="Paste the request, acceptance notes, links, and context exactly as received."
        required=""
      />
      <p
        class="_help_06f289"
        id="task-create-guidance"
      >
        Include the operator request, acceptance notes, links, risks, and any known constraints.
      </p>
      <p
        class="_fieldError_06f289"
        id="raw-requirements-error"
        role="alert"
      >
        Requirements are required.
      </p>
    </div>
    <div
      class="_actions_06f289"
    >
      <button
        aria-busy="false"
        aria-disabled="false"
        class="_button_0829c1 _primary_0829c1 _md_0829c1"
        type="submit"
      >
        <span>
          Create task draft
        </span>
      </button>
    </div>
  </form>
</section>
`;
